# sitn-django-plugins

./: .env.sample  .gitignore  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  setup.cfg
demo/: admin.py  forms.py  models.py  views.py
demo/migrations/: 0001_initial.py
demo/templates/demo/: index.html
django-dotnetid/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
django-dotnetid/django_dotnetid/: adapter.py  apps.py  provider.py  urls.py  views.py
django-extended-ol/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
django-extended-ol/django_extended_ol/: apps.py
django-extended-ol/django_extended_ol/forms/: widgets.py
django-extended-ol/django_extended_ol/static/olwidget/css/: WMTSWidget.css
django-extended-ol/django_extended_ol/static/olwidget/js/: WMTSWidget.js
django-extended-ol/django_extended_ol/templates/gis/: openlayers-wmts.html
django_extended_ol/: admin.py
django_extended_ol/forms/: widgets.py
django_extended_ol/static/olwidget/css/: WMTSWidget.css
django_extended_ol/static/olwidget/js/: WMTSWidget.js
django_extended_ol/templates/gis/: openlayers-wmts.html
sitn/: asgi.py  settings.py  urls.py  wsgi.py
