[tool.poetry]
name = "sitn-django-plugins"
version = "1.0.0"
description = "Development repository for custom sitn plugins"
authors = ["maltaesousa <stephane.maltaesousa@ne.ch>"]
license = "BSD"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
psycopg2 = "^2.9.10"
twine = "^6.1.0"
build = "^1.2.2.post1"
django-extended-ol = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
