[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[project]
name = "django-extended-ol"
version = "1.1.3"
authors = [
  { name="SITN", email="sitn@ne.ch" },
  { name="maltaesousa", email="stephane.maltaesousa@ne.ch" },
]
description = "An openlayers widget for Django with extended capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django >= 5.0"
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/sitn/sitn-django-plugins"
Issues = "https://github.com/sitn/sitn-django-plugins/issues"
